tests/compile_pass/public_headers/core_meta.cpp
#include <pb/core/meta.hpp>

int pb_public_header_core_meta() { return 0; }
